bk_ida/gccida/c3/unsave_expr_now_r
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsave_expr_now_r/src/tree.c:2193:7: error: expected expression
if (  struct expr ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsave_expr_now_r/src/tree.c:2205:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)v2); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsave_expr_now_r/src/tree.c:1314:1: note: 'tree_cons' declared here
tree_cons (purpose, value, chain)
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsave_expr_now_r/src/tree.c:2205:36: error: expected ')'
rtl_op = first_rtl_op( ( tree_code)v2); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsave_expr_now_r/src/tree.c:2205:22: note: to match this '('
rtl_op = first_rtl_op( ( tree_code)v2); 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/unsave_expr_now_r/src/obj/tree.o] Error 1
